--- a/Project/src/1.ipynb
+++ b/Project/src/1.ipynb
@@ -34,9 +34,10 @@
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "plt.rcParams['figure.figsize'] = (12, 6)\n",
     "\n",
-    "PATH = \"/Users/locseo/Desktop/Master DS/IT5425E_Data management & Visualization/Project/[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\"\n",
+    "# Sử dụng đường dẫn tương đối để code linh hoạt hơn\n",
+    "DATA_PATH = Path(\"../[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\")\n",
     "\n",
-    "data_path = Path(PATH)"
+    "data_path = DATA_PATH"
    ]
   },
   {
@@ -592,14 +593,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
+      ""
      ]
     }
    ],
@@ -617,9 +611,9 @@
     "    y_train, y_test = y.iloc[:n_train], y.iloc[n_train:]\n",
     "\n",
     "    model = LinearRegression().fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
+    "    y_pred = model.predict(X_test.values) # Sử dụng .values để tránh UserWarning\n",
     "    mae = mean_absolute_error(y_test, y_pred)\n",
-    "    rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred)) # Cập nhật để tránh FutureWarning\n",
     "\n",
     "    future_index = np.arange(len(X_full), len(X_full) + future_periods)\n",
     "    future_dates = pd.date_range(\n",
@@ -627,7 +621,7 @@
     "        periods=future_periods,\n",
     "        freq='MS'\n",
     "    )\n",
-    "    future_pred = model.predict(future_index.reshape(-1, 1))\n",
+    "    future_pred = model.predict(future_index.reshape(-1, 1)) # Sử dụng .values để tránh UserWarning\n",
     "    forecast = pd.DataFrame({\n",
     "        'order_month': future_dates,\n",
     "        f'{label}_forecast': future_pred\n",
