--- a/Project/src/2.ipynb
+++ b/Project/src/2.ipynb
@@ -29,9 +29,7 @@
     "\n",
     "plt.style.use('seaborn-v0_8')\n",
     "\n",
-    "PATH = \"/Users/locseo/Desktop/Master DS/IT5425E_Data management & Visualization/Project/[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\"\n",
-    "\n",
-    "DATA_PATH = Path(PATH)"
+    "DATA_PATH = Path(\"../[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\")"
    ]
   },
   {
@@ -899,13 +897,20 @@
     "pca = PCA(n_components=2, random_state=42)\n",
     "coords = pca.fit_transform(X_scaled)\n",
     "\n",
+    "# Lấy tọa độ tâm các cụm sau khi transform bằng PCA\n",
+    "centers_pca = pca.transform(kmeans.cluster_centers_)\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
     "scatter = ax.scatter(coords[:, 0], coords[:, 1], c=customer_feat['cluster'], cmap='tab10', alpha=0.7)\n",
+    "# Vẽ tâm các cụm\n",
+    "ax.scatter(centers_pca[:, 0], centers_pca[:, 1], c='red', s=100, marker='X', label='Centroids')\n",
+    "\n",
     "legend1 = ax.legend(*scatter.legend_elements(), title=\"Cluster\")\n",
     "ax.add_artist(legend1)\n",
     "ax.set_xlabel('PC1')\n",
     "ax.set_ylabel('PC2')\n",
     "ax.set_title('Customer PCA (normalized)')\n",
+    "ax.legend()\n",
     "plt.show()\n"
    ]
   },
