--- a/Project/src/3.ipynb
+++ b/Project/src/3.ipynb
@@ -24,8 +24,7 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "\n",
-    "PATH = \"/Users/locseo/Desktop/Master DS/IT5425E_Data management & Visualization/Project/[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\"\n",
-    "DATA_PATH = Path(PATH)\n",
+    "DATA_PATH = Path(\"../[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\")\n",
     "ORDERS_SHEET = 'Retails Order Full Dataset'\n",
     "\n",
     "orders = pd.read_excel(DATA_PATH, sheet_name=ORDERS_SHEET)\n",
@@ -62,6 +61,7 @@
     "orders_clean['category'] = orders_clean['Category'].astype('category')\n",
     "\n",
     "# Log-transform to stabilize variance\n",
+    "# Dùng .clip(lower=0) để xử lý các trường hợp Cost < 0 (do Profit > Sales)\n",
     "orders_clean['log_sales'] = np.log1p(orders_clean['Sales'])\n",
     "orders_clean['log_cost'] = np.log1p(orders_clean['Cost'].clip(lower=0))\n",
     "\n",
