--- a/Project/src/1.ipynb
+++ b/Project/src/1.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7eb022a7",
    "metadata": {},
    "outputs": [
@@ -608,9 +608,9 @@
     "    y_train, y_test = y.iloc[:n_train], y.iloc[n_train:]\n",
     "\n",
     "    model = LinearRegression().fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test.values) # Sử dụng .values để tránh UserWarning\n",
+    "    y_pred = model.predict(X_test.values) \n",
     "    mae = mean_absolute_error(y_test, y_pred)\n",
-    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred)) # Cập nhật để tránh FutureWarning\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred)) \n",
     "\n",
     "    future_index = np.arange(len(X_full), len(X_full) + future_periods)\n",
     "    future_dates = pd.date_range(\n",
@@ -618,7 +618,7 @@
     "        periods=future_periods,\n",
     "        freq='MS'\n",
     "    )\n",
-    "    future_pred = model.predict(future_index.reshape(-1, 1)) # Sử dụng .values để tránh UserWarning\n",
+    "    future_pred = model.predict(future_index.reshape(-1, 1)) \n",
     "    forecast = pd.DataFrame({\n",
     "        'order_month': future_dates,\n",
     "        f'{label}_forecast': future_pred\n",
