--- a/Project/src/2.ipynb
+++ b/Project/src/2.ipynb
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3d22ea75",
    "metadata": {},
    "outputs": [
@@ -897,12 +897,12 @@
     "pca = PCA(n_components=2, random_state=42)\n",
     "coords = pca.fit_transform(X_scaled)\n",
     "\n",
-    "# Lấy tọa độ tâm các cụm sau khi transform bằng PCA\n",
+    "# Get the coordinates of the cluster centers after transformation\n",
     "centers_pca = pca.transform(kmeans.cluster_centers_)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
     "scatter = ax.scatter(coords[:, 0], coords[:, 1], c=customer_feat['cluster'], cmap='tab10', alpha=0.7)\n",
-    "# Vẽ tâm các cụm\n",
+    "# Draw cluster centers\n",
     "ax.scatter(centers_pca[:, 0], centers_pca[:, 1], c='red', s=100, marker='X', label='Centroids')\n",
     "\n",
     "legend1 = ax.legend(*scatter.legend_elements(), title=\"Cluster\")\n",
