--- a/Project/src/3.ipynb
+++ b/Project/src/3.ipynb
@@ -61,7 +61,7 @@
     "orders_clean['category'] = orders_clean['Category'].astype('category')\n",
     "\n",
     "# Log-transform to stabilize variance\n",
-    "# Dùng .clip(lower=0) để xử lý các trường hợp Cost < 0 (do Profit > Sales)\n",
+    "# Use .clip(lower=0) to handle cases where Cost < 0 (because Profit > Sales)\n",
     "orders_clean['log_sales'] = np.log1p(orders_clean['Sales'])\n",
     "orders_clean['log_cost'] = np.log1p(orders_clean['Cost'].clip(lower=0))\n",
     "\n",
