add makedirs for save files operations

--- a/Project/src/1_Cleaning-And-EDA/1_Data-Cleaning.ipynb
+++ b/Project/src/1_Cleaning-And-EDA/1_Data-Cleaning.ipynb
@@ -494,11 +494,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a080db10",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os \n",
+    "os.makedirs('../../[DATASET C] Retail Supply Chain Sales Analysis/processed/', exist_ok=True)\n",
     "retail.to_csv('../../[DATASET C] Retail Supply Chain Sales Analysis/processed/retail_cleaned.csv', index=False)\n",
     "calendar.to_csv('../../[DATASET C] Retail Supply Chain Sales Analysis/processed/calendar_cleaned.csv', index=False)"
    ]
