--- a/Project/src/1_Cleaning-And-EDA/2_EDA.ipynb
+++ b/Project/src/1_Cleaning-And-EDA/2_EDA.ipynb
@@ -200,11 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b2257053",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os \n",
+    "os.makedirs('../../[DATASET C] Retail Supply Chain Sales Analysis/processed/splitting/', exist_ok=True)\n",
     "train_set.to_csv('../../[DATASET C] Retail Supply Chain Sales Analysis/processed/splitting/train_set.csv', index=False)\n",
     "val_set.to_csv('../../[DATASET C] Retail Supply Chain Sales Analysis/processed/splitting/val_set.csv', index=False)\n",
     "test_set.to_csv('../../[DATASET C] Retail Supply Chain Sales Analysis/processed/splitting/test_set.csv', index=False)"
