--- a/Project/src/2_Analysis-problems/1.ipynb
+++ b/Project/src/2_Analysis-problems/1.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7c3cad2f",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "plt.rcParams['figure.figsize'] = (12, 6)\n",
     "\n",
-    "DATA_PATH = Path(\"../[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\")\n",
+    "DATA_PATH = Path(\"../../[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\")\n",
     "\n",
     "data_path = DATA_PATH"
    ]
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "db511d2a",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        " 4     Jul 2016            28          Week 28            2   Tuesday  )"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "01e8fde8",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4  2014-05-01  29639.834  3912.2499             4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "92211f31",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "b56b5648",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "ca68d4b5",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "15    2017-10-01  211776.5980  25127.5835"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "40fc796a",
    "metadata": {},
    "outputs": [
@@ -553,14 +553,18 @@
    "id": "884796a8",
    "metadata": {},
    "source": [
-    "\n",
     "## 8) Train/test split and 6-month projection (monthly)\n",
-    "Chronological 80/20 split to evaluate the simple trend model, then forecast the next 6 months."
+    "Chronological 80/20 split to evaluate the simple trend model, then forecast the next 6 months.\n",
+    "\n",
+    "- Keep temporal order: using the first ~80% of months for training and the remaining ~20% for test avoids leakage from the future into the model.\n",
+    "- Evaluate a minimal baseline: a linear regression on the month index quantifies the straight-line growth/decline; MAE/RMSE on the held-out tail tell us if the drift is roughly linear.\n",
+    "- Project 6 months ahead: extend the index forward to get a short-term forecast that follows the fitted slope.\n",
+    "- Sales and profit are modeled independently so each can have a different slope and error profile.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7eb022a7",
    "metadata": {},
    "outputs": [
@@ -591,7 +595,16 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -650,14 +663,26 @@
    "id": "f53fc94f",
    "metadata": {},
    "source": [
-    "\n",
     "## 9) Residual-based anomaly detection (monthly)\n",
-    "Flag months where actuals deviate strongly from the fitted linear trend using Z-score on residuals.\n"
+    "Flag months where actuals deviate strongly from the fitted linear trend using Z-score on residuals.\n",
+    "\n",
+    "Residuals (denote $r$) (actual minus fitted trend):\n",
+    "\n",
+    "$$r_t = y_t - \\hat{y}_t$$\n",
+    "\n",
+    "Z-score on residuals:\n",
+    "\n",
+    "$$Z_t = \\frac{\\lvert r_t - \\mu_r \\rvert}{\\sigma_r + 10^{-9}}$$\n",
+    "\n",
+    "Interpretation and threshold:\n",
+    "- The residual Z-score measures how many standard deviations a month is away from the typical error around the trend.\n",
+    "- Threshold set at $Z > 2.5$ so we only flag large deviations: under a roughly normal error pattern, about 98.8% of values lie within +/- $2.5\\sigma$, so only the most extreme ~1.2% get flagged.\n",
+    "- $2.5\\sigma$ balances sensitivity vs noise for this small monthly sample: lower (e.g., 2.0) would over-flag normal volatility, higher (3.0) would miss meaningful jumps/drops.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "cba8b38f",
    "metadata": {},
    "outputs": [
@@ -690,7 +715,7 @@
     "\n",
     "def flag_anomalies(trend_df, target_col, trend_col, Z_thresh=2.5):\n",
     "    residuals = trend_df[target_col] - trend_df[trend_col]\n",
-    "    Z = (residuals - residuals.mean()).abs() / (residuals.std(ddof=0) + 1e-9)\n",
+    "    Z = (residuals - residuals.mean()).abs() / (residuals.std(ddof=0) + 1e-9)   \n",
     "    flagged = trend_df.copy()\n",
     "    flagged['residual'] = residuals\n",
     "    flagged['Z-score'] = Z\n",
