--- a/Project/src/2_Analysis-problems/3.ipynb
+++ b/Project/src/2_Analysis-problems/3.ipynb
@@ -238,7 +238,7 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "\n",
-    "DATA_PATH = Path(\"../[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\")\n",
+    "DATA_PATH = Path(\"../../[DATASET C] Retail Supply Chain Sales Analysis/[C] Retail-Supply-Chain-Sales-Analysis.xlsx\")\n",
     "ORDERS_SHEET = 'Retails Order Full Dataset'\n",
     "\n",
     "orders = pd.read_excel(DATA_PATH, sheet_name=ORDERS_SHEET)\n",
@@ -510,7 +510,7 @@
        "      <th>Pred Cost (mean)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody>\n",
+       "  <tbody style=\"text-align: right;\">\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Second Class</td>\n",
@@ -549,16 +549,11 @@
       ],
       "text/plain": [
        "        Ship Mode Region (fixed) Category (fixed)  Pred Sales (mean)  \\\n",
-       "2    Second Class           West  Office Supplies          37.803334   \n",
-       "1        Same Day           West  Office Supplies          36.953449   \n",
-       "3  Standard Class           West  Office Supplies          36.360069   \n",
-       "0     First Class           West  Office Supplies          35.942060   \n",
-       "\n",
-       "   Pred Cost (mean)  \n",
-       "2         26.304284  \n",
-       "1         26.119456  \n",
-       "3         26.142271  \n",
-       "0         26.014697  "
+       "        Ship Mode Region (fixed) Category (fixed)  Pred Sales (mean)  Pred Cost (mean)  Pred Profit (mean)\n",
+       "2    Second Class           West  Office Supplies          37.803334         26.304284           11.499050\n",
+       "0     First Class           West  Office Supplies          35.942060         26.014697            9.927363\n",
+       "1        Same Day           West  Office Supplies          36.953449         26.119456           10.833993\n",
+       "3  Standard Class           West  Office Supplies          36.360069         26.142271           10.217798"
       ]
      },
      "execution_count": 4,
@@ -587,7 +582,12 @@
     "    })\n",
     "\n",
     "pred_df = pd.DataFrame(pred_table).sort_values('Pred Sales (mean)', ascending=False)\n",
-    "pred_df\n"
+    "\n",
+    "# Add predicted profit for easier comparison\n",
+    "pred_df['Pred Profit (mean)'] = pred_df['Pred Sales (mean)'] - pred_df['Pred Cost (mean)']\n",
+    "pred_df.sort_values('Pred Profit (mean)', ascending=False, inplace=True)\n",
+    "\n",
+    "pred_df"
    ]
   },
   {
@@ -601,6 +601,34 @@
     "- `Pred Sales/Pred Cost` provides a practical comparison between ship modes in the same regional & popular category context.\n",
     "  \n",
     "- `region_mode`, `category_mode` can be replaced with other values ​​or weighted average to reflect the sales channel reality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conclusion-cell",
+   "metadata": {},
+   "source": [
+    "### Conclusions and Recommendations\n",
+    "\n",
+    "**1. Main Conclusion:**\n",
+    "After controlling for confounding factors such as Region and Category, there is no strong statistical evidence to conclude that Ship Mode has a significant impact on Sales or Cost of an order.\n",
+    "\n",
+    "* **From the model:** In the controlled models, all coefficients for Ship Mode have very high p-values ​​(>> 0.05). This means that the small observed difference in sales/costs between shipping modes is likely due to chance, not a real effect.\n",
+    "\n",
+    "* **From the forecast table:** When forecasting for a specific scenario (same region, same category), the expected revenue and profit between shipping methods are almost the same (insignificant difference).\n",
+    "\n",
+    "**2. Strategic recommendations:**\n",
+    "Shipping strategies:\n",
+    "\n",
+    "* **Focus on Operating Costs and Customer Experience:** Since `Ship Mode` does not affect the basket value, the decision on which shipping method to prioritize should be based on two main factors:\n",
+    "\n",
+    "1. **Actual operating costs:** The costs that the company has to pay to shipping partners.\n",
+    "\n",
+    "2. **Customer satisfaction:** Delivery speed and service quality.\n",
+    "\n",
+    "* **Optimize costs without fear of losing revenue:** Businesses can confidently offer low-cost, standard shipping options without worrying that it will lead customers to buy lower-value products.\n",
+    "\n",
+    "* **Segmentation by need:** Instead of a general policy, multiple shipping options can be offered to customers. Urgent customers will choose `Same Day` or `First Class` and be willing to pay extra (if any), while others may choose `Standard Class` to save costs."
    ]
   }
  ],
